jobs4u.core/src/main/resources/grammar/InterviewQuestionsParser.java
// Generated from InterviewQuestions.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class InterviewQuestionsParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, String=31, 
		Decimal=32, Real=33, COMA_TOKEN=34, WS=35;
	public static final int
		RULE_questions = 0, RULE_question = 1, RULE_true_false = 2, RULE_short = 3, 
		RULE_single_choice = 4, RULE_multiple_choice = 5, RULE_c_choices = 6, 
		RULE_choice = 7, RULE_int_q = 8, RULE_real_q = 9, RULE_date_q = 10, RULE_time_q = 11, 
		RULE_scale_q = 12;
	private static String[] makeRuleNames() {
		return new String[] {
			"questions", "question", "true_false", "short", "single_choice", "multiple_choice", 
			"c_choices", "choice", "int_q", "real_q", "date_q", "time_q", "scale_q"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'TRUE_FALSE'", "'QUESTION'", "'WITH'", "'ID'", "'BEING'", "'DIFFICULTY'", 
			"'OF'", "'END_STATEMENT'", "'ITS_VALIDATION'", "'IS_DEFINED'", "'AS'", 
			"'TRUE'", "'FALSE'", "'AWARDING'", "'SHORT_TEXT'", "'TYPE'", "'literal'", 
			"'regex'", "'SINGLE_CHOICE'", "'FROM'", "'MULTIPLE_CHOICE'", "'('", "')'", 
			"'INTEGER_NUMBER'", "'REAL_NUMBER'", "'DATE'", "'TIME'", "'SCALE'", "'BETWEEN'", 
			"'AND'", null, null, null, "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "String", "Decimal", "Real", 
			"COMA_TOKEN", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "InterviewQuestions.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public InterviewQuestionsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuestionsContext extends ParserRuleContext {
		public List<QuestionContext> question() {
			return getRuleContexts(QuestionContext.class);
		}
		public QuestionContext question(int i) {
			return getRuleContext(QuestionContext.class,i);
		}
		public QuestionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_questions; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewQuestionsVisitor ) return ((InterviewQuestionsVisitor<? extends T>)visitor).visitQuestions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuestionsContext questions() throws RecognitionException {
		QuestionsContext _localctx = new QuestionsContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_questions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(27); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(26);
				question();
				}
				}
				setState(29); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 522747906L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuestionContext extends ParserRuleContext {
		public True_falseContext true_false() {
			return getRuleContext(True_falseContext.class,0);
		}
		public ShortContext short_() {
			return getRuleContext(ShortContext.class,0);
		}
		public Single_choiceContext single_choice() {
			return getRuleContext(Single_choiceContext.class,0);
		}
		public Multiple_choiceContext multiple_choice() {
			return getRuleContext(Multiple_choiceContext.class,0);
		}
		public Int_qContext int_q() {
			return getRuleContext(Int_qContext.class,0);
		}
		public Real_qContext real_q() {
			return getRuleContext(Real_qContext.class,0);
		}
		public Date_qContext date_q() {
			return getRuleContext(Date_qContext.class,0);
		}
		public Time_qContext time_q() {
			return getRuleContext(Time_qContext.class,0);
		}
		public Scale_qContext scale_q() {
			return getRuleContext(Scale_qContext.class,0);
		}
		public QuestionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_question; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewQuestionsVisitor ) return ((InterviewQuestionsVisitor<? extends T>)visitor).visitQuestion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuestionContext question() throws RecognitionException {
		QuestionContext _localctx = new QuestionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_question);
		try {
			setState(40);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(31);
				true_false();
				}
				break;
			case T__14:
				enterOuterAlt(_localctx, 2);
				{
				setState(32);
				short_();
				}
				break;
			case T__18:
				enterOuterAlt(_localctx, 3);
				{
				setState(33);
				single_choice();
				}
				break;
			case T__20:
				enterOuterAlt(_localctx, 4);
				{
				setState(34);
				multiple_choice();
				}
				break;
			case T__23:
				enterOuterAlt(_localctx, 5);
				{
				setState(35);
				int_q();
				}
				break;
			case T__24:
				enterOuterAlt(_localctx, 6);
				{
				setState(36);
				real_q();
				}
				break;
			case T__25:
				enterOuterAlt(_localctx, 7);
				{
				setState(37);
				date_q();
				}
				break;
			case T__26:
				enterOuterAlt(_localctx, 8);
				{
				setState(38);
				time_q();
				}
				break;
			case T__27:
				enterOuterAlt(_localctx, 9);
				{
				setState(39);
				scale_q();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class True_falseContext extends ParserRuleContext {
		public Token questionId;
		public Token questionPrompt;
		public Token questionDifficulty;
		public Token questionPoints;
		public List<TerminalNode> String() { return getTokens(InterviewQuestionsParser.String); }
		public TerminalNode String(int i) {
			return getToken(InterviewQuestionsParser.String, i);
		}
		public List<TerminalNode> Decimal() { return getTokens(InterviewQuestionsParser.Decimal); }
		public TerminalNode Decimal(int i) {
			return getToken(InterviewQuestionsParser.Decimal, i);
		}
		public True_falseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_true_false; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewQuestionsVisitor ) return ((InterviewQuestionsVisitor<? extends T>)visitor).visitTrue_false(this);
			else return visitor.visitChildren(this);
		}
	}

	public final True_falseContext true_false() throws RecognitionException {
		True_falseContext _localctx = new True_falseContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_true_false);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			match(T__0);
			setState(43);
			match(T__1);
			setState(44);
			match(T__2);
			setState(45);
			match(T__3);
			setState(46);
			((True_falseContext)_localctx).questionId = match(String);
			setState(47);
			match(T__4);
			setState(48);
			((True_falseContext)_localctx).questionPrompt = match(String);
			setState(49);
			match(T__2);
			setState(50);
			match(T__5);
			setState(51);
			match(T__6);
			setState(52);
			((True_falseContext)_localctx).questionDifficulty = match(Decimal);
			setState(53);
			match(T__7);
			setState(54);
			match(T__8);
			setState(55);
			match(T__9);
			setState(56);
			match(T__10);
			setState(57);
			_la = _input.LA(1);
			if ( !(_la==T__11 || _la==T__12) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(58);
			match(T__13);
			setState(59);
			((True_falseContext)_localctx).questionPoints = match(Decimal);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ShortContext extends ParserRuleContext {
		public Token questionId;
		public Token questionPrompt;
		public Token questionDifficulty;
		public Token questionCorrection;
		public Token questionPoints;
		public List<TerminalNode> String() { return getTokens(InterviewQuestionsParser.String); }
		public TerminalNode String(int i) {
			return getToken(InterviewQuestionsParser.String, i);
		}
		public List<TerminalNode> Decimal() { return getTokens(InterviewQuestionsParser.Decimal); }
		public TerminalNode Decimal(int i) {
			return getToken(InterviewQuestionsParser.Decimal, i);
		}
		public ShortContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_short; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewQuestionsVisitor ) return ((InterviewQuestionsVisitor<? extends T>)visitor).visitShort(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ShortContext short_() throws RecognitionException {
		ShortContext _localctx = new ShortContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_short);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			match(T__14);
			setState(62);
			match(T__1);
			setState(63);
			match(T__2);
			setState(64);
			match(T__3);
			setState(65);
			((ShortContext)_localctx).questionId = match(String);
			setState(66);
			match(T__4);
			setState(67);
			((ShortContext)_localctx).questionPrompt = match(String);
			setState(68);
			match(T__2);
			setState(69);
			match(T__5);
			setState(70);
			match(T__6);
			setState(71);
			((ShortContext)_localctx).questionDifficulty = match(Decimal);
			setState(72);
			match(T__7);
			setState(73);
			match(T__8);
			setState(74);
			match(T__9);
			setState(75);
			match(T__10);
			setState(76);
			((ShortContext)_localctx).questionCorrection = match(String);
			setState(77);
			match(T__6);
			setState(78);
			match(T__15);
			setState(79);
			_la = _input.LA(1);
			if ( !(_la==T__16 || _la==T__17) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(80);
			match(T__13);
			setState(81);
			((ShortContext)_localctx).questionPoints = match(Decimal);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Single_choiceContext extends ParserRuleContext {
		public Token questionId;
		public Token questionPrompt;
		public Token questionDifficulty;
		public Token correctChoice;
		public Token choices;
		public Token questionPoints;
		public List<TerminalNode> String() { return getTokens(InterviewQuestionsParser.String); }
		public TerminalNode String(int i) {
			return getToken(InterviewQuestionsParser.String, i);
		}
		public List<TerminalNode> Decimal() { return getTokens(InterviewQuestionsParser.Decimal); }
		public TerminalNode Decimal(int i) {
			return getToken(InterviewQuestionsParser.Decimal, i);
		}
		public Single_choiceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_single_choice; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewQuestionsVisitor ) return ((InterviewQuestionsVisitor<? extends T>)visitor).visitSingle_choice(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Single_choiceContext single_choice() throws RecognitionException {
		Single_choiceContext _localctx = new Single_choiceContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_single_choice);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(T__18);
			setState(84);
			match(T__1);
			setState(85);
			match(T__2);
			setState(86);
			match(T__3);
			setState(87);
			((Single_choiceContext)_localctx).questionId = match(String);
			setState(88);
			match(T__4);
			setState(89);
			((Single_choiceContext)_localctx).questionPrompt = match(String);
			setState(90);
			match(T__2);
			setState(91);
			match(T__5);
			setState(92);
			match(T__6);
			setState(93);
			((Single_choiceContext)_localctx).questionDifficulty = match(Decimal);
			setState(94);
			match(T__7);
			setState(95);
			match(T__8);
			setState(96);
			match(T__9);
			setState(97);
			match(T__10);
			setState(98);
			((Single_choiceContext)_localctx).correctChoice = match(String);
			setState(99);
			match(T__19);
			setState(101); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(100);
				((Single_choiceContext)_localctx).choices = match(String);
				}
				}
				setState(103); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==String );
			setState(105);
			match(T__13);
			setState(106);
			((Single_choiceContext)_localctx).questionPoints = match(Decimal);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Multiple_choiceContext extends ParserRuleContext {
		public Token questionId;
		public Token questionPrompt;
		public Token questionDifficulty;
		public C_choicesContext correctChoices;
		public Token choices;
		public Token questionPoints;
		public List<TerminalNode> String() { return getTokens(InterviewQuestionsParser.String); }
		public TerminalNode String(int i) {
			return getToken(InterviewQuestionsParser.String, i);
		}
		public List<TerminalNode> Decimal() { return getTokens(InterviewQuestionsParser.Decimal); }
		public TerminalNode Decimal(int i) {
			return getToken(InterviewQuestionsParser.Decimal, i);
		}
		public C_choicesContext c_choices() {
			return getRuleContext(C_choicesContext.class,0);
		}
		public Multiple_choiceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multiple_choice; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewQuestionsVisitor ) return ((InterviewQuestionsVisitor<? extends T>)visitor).visitMultiple_choice(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Multiple_choiceContext multiple_choice() throws RecognitionException {
		Multiple_choiceContext _localctx = new Multiple_choiceContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_multiple_choice);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(T__20);
			setState(109);
			match(T__1);
			setState(110);
			match(T__2);
			setState(111);
			match(T__3);
			setState(112);
			((Multiple_choiceContext)_localctx).questionId = match(String);
			setState(113);
			match(T__4);
			setState(114);
			((Multiple_choiceContext)_localctx).questionPrompt = match(String);
			setState(115);
			match(T__2);
			setState(116);
			match(T__5);
			setState(117);
			match(T__6);
			setState(118);
			((Multiple_choiceContext)_localctx).questionDifficulty = match(Decimal);
			setState(119);
			match(T__7);
			setState(120);
			match(T__8);
			setState(121);
			match(T__9);
			setState(122);
			match(T__10);
			setState(123);
			((Multiple_choiceContext)_localctx).correctChoices = c_choices();
			setState(124);
			match(T__19);
			setState(126); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(125);
				((Multiple_choiceContext)_localctx).choices = match(String);
				}
				}
				setState(128); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==String );
			setState(130);
			match(T__13);
			setState(131);
			((Multiple_choiceContext)_localctx).questionPoints = match(Decimal);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class C_choicesContext extends ParserRuleContext {
		public List<ChoiceContext> choice() {
			return getRuleContexts(ChoiceContext.class);
		}
		public ChoiceContext choice(int i) {
			return getRuleContext(ChoiceContext.class,i);
		}
		public List<TerminalNode> COMA_TOKEN() { return getTokens(InterviewQuestionsParser.COMA_TOKEN); }
		public TerminalNode COMA_TOKEN(int i) {
			return getToken(InterviewQuestionsParser.COMA_TOKEN, i);
		}
		public C_choicesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_c_choices; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewQuestionsVisitor ) return ((InterviewQuestionsVisitor<? extends T>)visitor).visitC_choices(this);
			else return visitor.visitChildren(this);
		}
	}

	public final C_choicesContext c_choices() throws RecognitionException {
		C_choicesContext _localctx = new C_choicesContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_c_choices);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			choice();
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMA_TOKEN) {
				{
				{
				setState(134);
				match(COMA_TOKEN);
				setState(135);
				choice();
				}
				}
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ChoiceContext extends ParserRuleContext {
		public TerminalNode String() { return getToken(InterviewQuestionsParser.String, 0); }
		public TerminalNode COMA_TOKEN() { return getToken(InterviewQuestionsParser.COMA_TOKEN, 0); }
		public TerminalNode Decimal() { return getToken(InterviewQuestionsParser.Decimal, 0); }
		public ChoiceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_choice; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewQuestionsVisitor ) return ((InterviewQuestionsVisitor<? extends T>)visitor).visitChoice(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ChoiceContext choice() throws RecognitionException {
		ChoiceContext _localctx = new ChoiceContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_choice);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(T__21);
			setState(142);
			match(String);
			setState(143);
			match(COMA_TOKEN);
			setState(144);
			match(Decimal);
			setState(145);
			match(T__22);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Int_qContext extends ParserRuleContext {
		public Token questionId;
		public Token questionPrompt;
		public Token questionDifficulty;
		public Token questionCorrection;
		public Token questionPoints;
		public List<TerminalNode> String() { return getTokens(InterviewQuestionsParser.String); }
		public TerminalNode String(int i) {
			return getToken(InterviewQuestionsParser.String, i);
		}
		public List<TerminalNode> Decimal() { return getTokens(InterviewQuestionsParser.Decimal); }
		public TerminalNode Decimal(int i) {
			return getToken(InterviewQuestionsParser.Decimal, i);
		}
		public Int_qContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_int_q; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewQuestionsVisitor ) return ((InterviewQuestionsVisitor<? extends T>)visitor).visitInt_q(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Int_qContext int_q() throws RecognitionException {
		Int_qContext _localctx = new Int_qContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_int_q);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			match(T__23);
			setState(148);
			match(T__1);
			setState(149);
			match(T__2);
			setState(150);
			match(T__3);
			setState(151);
			((Int_qContext)_localctx).questionId = match(String);
			setState(152);
			match(T__4);
			setState(153);
			((Int_qContext)_localctx).questionPrompt = match(String);
			setState(154);
			match(T__2);
			setState(155);
			match(T__5);
			setState(156);
			match(T__6);
			setState(157);
			((Int_qContext)_localctx).questionDifficulty = match(Decimal);
			setState(158);
			match(T__7);
			setState(159);
			match(T__8);
			setState(160);
			match(T__9);
			setState(161);
			match(T__10);
			setState(162);
			((Int_qContext)_localctx).questionCorrection = match(Decimal);
			setState(163);
			match(T__13);
			setState(164);
			((Int_qContext)_localctx).questionPoints = match(Decimal);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Real_qContext extends ParserRuleContext {
		public Token questionId;
		public Token questionPrompt;
		public Token questionDifficulty;
		public Token questionCorrection;
		public Token questionPoints;
		public List<TerminalNode> String() { return getTokens(InterviewQuestionsParser.String); }
		public TerminalNode String(int i) {
			return getToken(InterviewQuestionsParser.String, i);
		}
		public List<TerminalNode> Decimal() { return getTokens(InterviewQuestionsParser.Decimal); }
		public TerminalNode Decimal(int i) {
			return getToken(InterviewQuestionsParser.Decimal, i);
		}
		public TerminalNode Real() { return getToken(InterviewQuestionsParser.Real, 0); }
		public Real_qContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_real_q; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewQuestionsVisitor ) return ((InterviewQuestionsVisitor<? extends T>)visitor).visitReal_q(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Real_qContext real_q() throws RecognitionException {
		Real_qContext _localctx = new Real_qContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_real_q);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166);
			match(T__24);
			setState(167);
			match(T__1);
			setState(168);
			match(T__2);
			setState(169);
			match(T__3);
			setState(170);
			((Real_qContext)_localctx).questionId = match(String);
			setState(171);
			match(T__4);
			setState(172);
			((Real_qContext)_localctx).questionPrompt = match(String);
			setState(173);
			match(T__2);
			setState(174);
			match(T__5);
			setState(175);
			match(T__6);
			setState(176);
			((Real_qContext)_localctx).questionDifficulty = match(Decimal);
			setState(177);
			match(T__7);
			setState(178);
			match(T__8);
			setState(179);
			match(T__9);
			setState(180);
			match(T__10);
			setState(181);
			((Real_qContext)_localctx).questionCorrection = match(Real);
			setState(182);
			match(T__13);
			setState(183);
			((Real_qContext)_localctx).questionPoints = match(Decimal);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Date_qContext extends ParserRuleContext {
		public Token questionId;
		public Token questionPrompt;
		public Token questionDifficulty;
		public Token questionCorrection;
		public Token format;
		public Token questionPoints;
		public List<TerminalNode> String() { return getTokens(InterviewQuestionsParser.String); }
		public TerminalNode String(int i) {
			return getToken(InterviewQuestionsParser.String, i);
		}
		public List<TerminalNode> Decimal() { return getTokens(InterviewQuestionsParser.Decimal); }
		public TerminalNode Decimal(int i) {
			return getToken(InterviewQuestionsParser.Decimal, i);
		}
		public Date_qContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_date_q; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewQuestionsVisitor ) return ((InterviewQuestionsVisitor<? extends T>)visitor).visitDate_q(this);
			else return visitor.visitChildren(this);
		}
	}
